--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <h6>class</h6>
     </div>
-    <h4>this is outer h4</h4>
+    <h4>this is outer h4 tagg</h4>
     <p>this is para tag</p>
     <input type="text" placeholder="enter your name" />
     <input type="number" placeholder="enter your number" />
