--- a/index.html
+++ b/index.html
@@ -5,40 +5,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MERN-777</title>
-</head>
-<style>
-    h1 {
+    <!-- <style>
+        input[type='text'] {
+            background-color: blueviolet;
+        }
+
+        .h4-tag {
+            background-color: gray;
+        }
+
+
+        #h1-id {
+            background-color: rgb(23, 101, 101);
+        }
+
+        .h1-tag {
+            background-color: green;
+        }
+    </style> -->
+    <!-- <link rel="stylesheet" href="styles.css" /> -->
+    <style>
+        /* .four ~ .para {
+            background-color: rgb(0, 162, 255);
+        } */
+        /* div{
+            border: 1px solid;
+        }
+      .h1:first-child{
         background-color: red;
-    }
+      } */
+ /* *{
+    margin: 40px;
+    padding: 0;
+ } */
+      .parent{
+        border: 1px solid;
+        padding: 10px;
 
-    .h2-tag {
-        background-color: yellowgreen;
-    }
-
-    #h3-tag {
-        background-color: grey;
-    }
-
-    input {
-        background-color: pink;
-    }
-
-    input[type='number'] {
-        background-color: blue;
-    }
-
-    h4 {
-        background-color: aqua;
-        color: chartreuse;
-    }
-</style>
+        /* height: x; */
+        position: fixed;
+        bottom: 0;
+        right: 0;
+      }
+      /* .child{
+        width: 50px;
+        height: 50px;
+        background-color: red;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+      } */
+    </style>
+</head>
 
 <body>
-    <h1>mern</h1>
+    <!-- <h1 id="h1-id" class="h1-tag">mern</h1>
     <h2 class="h2-tag">stack</h2>
     <h3 id="h3-tag">developer</h3>
     <div style="background-color: orange;">
-        <h4>welcome</h4>
+        <h4 class="h4-tag">welcome</h4>
         <h5>to</h5>
 
         <h6>class</h6>
@@ -47,7 +72,23 @@
     <p>this is para tag</p>
     <input type="text" placeholder="enter your name" />
     <input type="number" placeholder="enter your number" />
-    <input />
+    <input /> -->
+
+    <!-- <h1 class="hello">hello creators</h1> -->
+    <!-- <div class="one">1
+        <h1>hello</h1>
+        <h2>woorld</h2>
+        <div class="two">2</div>
+        <div class="three">3
+            <h1 class="four">4</h1>
+            <h1 class="five">5</h1>
+            <h1 class="six">6</h1>
+            <p class="para">para</p>
+        </div>
+    </div> -->
+    <div class="parent">cbjbsjcnbjk
+        <!-- <div class="child"></div> -->
+    </div>
 </body>
 
 </html>
