--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
       .h1:first-child{
         background-color: red;
       } */
- /* *{
+        /* *{
     margin: 40px;
     padding: 0;
  } */
-      .parent{
+        /* .parent{
         border: 1px solid;
-        padding: 10px;
+        padding: 10px; */
 
         /* height: x; */
-        position: fixed;
+        /* position: fixed;
         bottom: 0;
         right: 0;
-      }
-      /* .child{
+      } */
+        /* .child{
         width: 50px;
         height: 50px;
         background-color: red;
@@ -55,6 +55,7 @@
         right: 0;
         position: absolute;
       } */
+       
     </style>
 </head>
 
@@ -75,20 +76,16 @@
     <input /> -->
 
     <!-- <h1 class="hello">hello creators</h1> -->
-    <!-- <div class="one">1
-        <h1>hello</h1>
-        <h2>woorld</h2>
-        <div class="two">2</div>
-        <div class="three">3
-            <h1 class="four">4</h1>
-            <h1 class="five">5</h1>
-            <h1 class="six">6</h1>
-            <p class="para">para</p>
-        </div>
-    </div> -->
-    <div class="parent">cbjbsjcnbjk
-        <!-- <div class="child"></div> -->
+    <h1>1</h1>
+    <h1>2</h1>
+    <h1>3</h1>
+    <h1>4</h1>
+    <h1>5</h1>
+    <h1>6</h1>
+    <!-- <div class="parent">cbjbsjcnbjk -->
+    <!-- <div class="child"></div> -->
     </div>
+   
 </body>
 
 </html>
